--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="./style/estilo1.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="./style/estilo2.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="./style/demo.css" media="screen" />
+	<link rel="Shortcut Icon" href="./logo/logo2.PNG" type="image/x-icon" />
 	<script type="text/javascript" src="./java/script.js"></script>
 	<script language="Javascript">
 document.oncontextmenu = function(){return false}
@@ -76,12 +77,19 @@ SU NAVEGADOR NO SOPORTA FRAMES
 
 <br>
 
+
+
+
+
 <p class="descargas">Los siguientes botones ofrecen la carta de presentación y el Curriculum Vitae en formato pdf.</p>
 
 
-<a href="./dat/carta.pdf" download="carta.pdf" title="Clic para descargar"><input class="pre" type="button" value="Carta de presentación"></a>
+<a href="./dat/Carta.pdf" download="carta.pdf" title="Clic para descargar"><input class="pre" type="button" value="Carta de presentación"></a>
 
 <a href="./dat/CV.pdf" download="CV.pdf"><input class="cv" type="button" value="Curriculum Vitae" title="Clic para descargar"></a>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,64L24,64C48,64,96,64,144,96C192,128,240,192,288,186.7C336,181,384,107,432,96C480,85,528,139,576,138.7C624,139,672,85,720,64C768,43,816,53,864,90.7C912,128,960,192,1008,202.7C1056,213,1104,171,1152,133.3C1200,96,1248,64,1296,58.7C1344,53,1392,75,1416,85.3L1440,96L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
+
 
 <hr>
 
