--- a/part/part1.html
+++ b/part/part1.html
@@ -18,7 +18,7 @@ document.oncontextmenu = function(){return false}
 <p>Nombre: Vicente Damián. </p>
 <p>Apellidos: Mesa Torres.</p>
 <p>Fecha de Nacimiento: 18-09-1990</p>
-<p>Localidad: Arona, Las Galletas.</p>
+<p>Localidad: Granadilla de Abona, San Isidro.</p>
 <p>Teléfono: <a href="tel:+34654202711">654202711</a></p>
 
 <p>Correo: 
@@ -31,6 +31,14 @@ document.oncontextmenu = function(){return false}
 	<a href="skype:vmestor@hotmail.com?chat">Enviar mensaje</a>//
 	<a href="skype:vmestor@hotmail.com?voicemail">Enviar mensaje de voz</a>
 </p>
+
+<a href="https://wa.me/34654202711" target="_blank"><img src="../logo/wt.png" width="40" height="40"></a>
+	
+
+
+
+
+
 
 </div>
 
