--- a/part/part3.html
+++ b/part/part3.html
@@ -15,9 +15,22 @@ document.oncontextmenu = function(){return false}
 
 <div class="cont">
 
-<li class="l2">2017: Certificado Apps para dispositivos móviles -> Universidad Complutense de Madrid y Google.</li>
+<li class="12">Diploma online “comandos, scripting Linux/Unix”.</li>
+<li class="12">Certificado “Desarrollo de Apps móviles” por la Universidad Complutense de Madrid y Google Activate.</li>
+<li class="12">Certificado “Introducción al Desarrollo Web I” por Google Activate.</li>
+<li class="12">Certificado “Introducción al Desarrollo Web II” por Google Activate.</li>
+<li class="12">Certificado "Comercio electrónico" por Google Activate.</li>
+<li class="12">Certificado "Análisis Web" por Google Activate.</li>
+<li class="12">Certificado "Python 3" por SoloLearn.</li>
+<li class="12">Certificado "C++" por SoloLearn.</li>
+<li class="12">Certificado “SQL” por SoloLearn.</li>
+<li class="12">Certificado “HTML” por SoloLearn.</li>
+<li class="12">Certificado “CSS” por SoloLearn.</li>
+<li class="12">Certificado “jQuery” por SoloLearn.</li>
+<li class="12">Certificado “Introducción a la Seguridad Cibernética” por Cisco Networking Academy.</li>
+<li class="12">Diploma “Desarrollo de Apps Android para Digitalizacioin de Empresas” por SEPE.</li>
 
-<li class="l2">2016: Certificado Linux bash/scripting -> Aprendemia.</li>	
+
 
 </div>
 
