--- a/part/part4.html
+++ b/part/part4.html
@@ -15,11 +15,14 @@ document.oncontextmenu = function(){return false}
 
 <div class="cont">
 
-<p>2017 - Actual -> Informático Freelance</p>
-<p>Septiembre 2016 - Noviembre 2016 -> Lege 2013 consultores SL (Worten).</p>
-<p>Marzo 2016 - Mayo 2016 -> Atos Origin SE.</p>
-<p>2013 - 2016 -> Supermarket Lydia.</p>
-<p>2012 - 2013 -> Minimarket 24h.</p>
+
+<p>Septiembre 2018 - Actual -> Autónomo Informático - Informática Sion</p>
+<p>Marzo 2018 - Agosto 2018 -> Auditor Redes Informáticas - Siter Andalucía.</p>
+<p>Enero 2017 - Agosto 2018 -> Informático Freelance.</p>
+<p>Septiembre 2016 - Noviembre 2016 -> Técnico Informático - Lege 2013 consultores SL (Worten).</p>
+<p>Marzo 2016 - Mayo 2016 -> Prácticas Empresa - Atos Origin SE.</p>
+<p>2013 - 2016 -> Cajero reponedor - Supermarket Lydia.</p>
+<p>2012 - 2013 -> Cajero reponedor - Minimarket 24h.</p>
 
 </div>
 
