--- a/part/part6.html
+++ b/part/part6.html
@@ -19,6 +19,8 @@ document.oncontextmenu = function(){return false}
 <li class="l4">API Pinnacle.</li>
 <li class="l4">Paginas web varias.</li>
 <li class="l4">Creación de manuales de usuario.</li>
+<li class="l4">Estos últimos años, al ser autónomo he tenido la oportunidad de realizar varios páginas web, aplicaciones, y mantenimiento informático.</li>
+
 
 <p></p>
 
